# django-professional-setup

./: db.sqlite3  docker-compose.yml  main.py  pyproject.toml
blog/: filters.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
